<resources>
    <string name="app_name">VendingDuitNow</string>
    <string name="back">Back</string>
    <string name="proceed_with_duitnow_pay">Proceed with DuitNow Pay</string>
    <string name="kindly_scan_the_qr_code_displayed_using_your_preferred_duitnow_app">Kindly scan the QR code displayed using your preferred DuitNow app</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="have_problem_with_qr_code">Have problem with QR Code? </string>
    <string name="tap_here_to_refresh_new_qr_code">Tap here to refresh new QR Code</string>
</resources>