<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp"
        app:cardCornerRadius="@dimen/layout_corner_radius"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mini_dialog_header_height"
                android:background="@drawable/header_curve_mini">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:text="@string/proceed_with_duitnow_pay"
                    android:textColor="#fff"
                    android:textSize="@dimen/mini_dialog_title_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="50dp"
                    android:gravity="center"
                    android:text="@string/kindly_scan_the_qr_code_displayed_using_your_preferred_duitnow_app"
                    android:textColor="#F44336"
                    android:textSize="@dimen/mini_dialog_description_text_size" />

                <ImageView
                    android:id="@+id/iv"
                    android:layout_width="@dimen/mini_dialog_logo_size"
                    android:layout_height="@dimen/mini_dialog_logo_size"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/duitnow"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:id="@+id/ll_qr_code"
                    android:layout_width="@dimen/mini_dialog_qr_container_size"
                    android:layout_height="@dimen/mini_dialog_qr_container_size"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_qr_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="@dimen/mini_dialog_progress_bar_size"
                        android:layout_height="@dimen/mini_dialog_progress_bar_size"
                        android:layout_gravity="center"
                        android:indeterminateTint="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/have_problem_with_qr_code"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/ll_refresh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/tap_here_to_refresh_new_qr_code"
                        android:textColor="@color/button_color_states_red"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_curve"
                android:paddingTop="4dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/tv_countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="Processing in (120 sec)"
                    android:textColor="@color/white"
                    android:textSize="@dimen/mini_dialog_countdown_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_price" />

                <LinearLayout
                    android:id="@+id/ll_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/tv_countdown"
                    app:layout_constraintLeft_toRightOf="@+id/tv_countdown"
                    app:layout_constraintTop_toTopOf="@+id/tv_countdown">

                    <ImageView
                        android:id="@+id/iv_cancel"
                        android:layout_width="@dimen/mini_dialog_cancel_icon_size"
                        android:layout_height="@dimen/mini_dialog_cancel_icon_size"
                        android:background="@drawable/circle_background"
                        android:contentDescription="@string/cancel"
                        android:src="@android:drawable/ic_delete" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="TOTAL : RM 0.00"
                    android:textColor="#fff"
                    android:textSize="@dimen/mini_dialog_price_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>