<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1000dp"
    android:layout_height="wrap_content">

    <com.blure.complexview.ComplexView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clipToPadding="false"
        app:radius="@dimen/layout_corner_radius"
        app:shadow="true"
        app:shadowAlpha="38"
        app:shadowSpread="8">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="@dimen/layout_corner_radius"
            app:cardElevation="8dp"
            app:cardMaxElevation="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/header_curve">

                    <TextView
                        android:id="@+id/mtd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:gravity="center"
                        android:text="@string/proceed_with_duitnow_pay"
                        android:textColor="#fff"
                        android:textSize="50sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="50dp"
                        android:gravity="center"
                        android:text="@string/kindly_scan_the_qr_code_displayed_using_your_preferred_duitnow_app"
                        android:textColor="#F44336"
                        android:textSize="36sp" />

                    <ImageView
                        android:id="@+id/iv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/duitnow"
                        android:contentDescription="@string/app_name" />

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_qr_code"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/app_name"
                            android:visibility="gone" />

                        <ProgressBar
                            android:id="@+id/progress_bar"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center"
                            android:indeterminateTint="@color/colorPrimaryDark" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_curve"
                    android:paddingTop="4dp"
                    android:paddingBottom="24dp">

                    <Button
                        android:id="@+id/btn_payment_made"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_background_rounded_green"
                        android:paddingStart="80dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="80dp"
                        android:paddingBottom="15dp"
                        android:text="Payment Already Made"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="36sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

                    <Button
                        android:id="@+id/btn_cancel"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_background_rounded_red"
                        android:paddingStart="80dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="80dp"
                        android:paddingBottom="15dp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="36sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_payment_made" />

                    <TextView
                        android:id="@+id/tv_countdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/circle_background"
                        android:gravity="center"
                        android:text="60"
                        android:textColor="@color/white"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
                        app:layout_constraintLeft_toRightOf="@+id/btn_cancel"
                        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />


                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:text="TOTAL : RM 0.00"
                        android:textColor="#fff"
                        android:textSize="50sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </com.blure.complexview.ComplexView>
</RelativeLayout>